# Mysticbook

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  compile.sh  log.txt  main  main.c  mystic_text_view.c  mystic_text_view.h  resources.txt  schema.sql  stylesheet.css  test.c  test.db  text_block.c  thinking.txt  todo.md  todo.txt  util.c  util.h  worklog.md
src/: CMakeLists.txt  DrawLayer.c  DrawLayer.h  GapBuffer.c  GapBuffer.h  clipboard_service.c  clipboard_service.h  file_service.c  file_service.h  file_util.c  file_util.h  main.c  mystic.h  mystic_book_app_window.c  mystic_book_app_window.h  mystic_book_application.c  mystic_book_application.h  mystic_book_doc_list.c  mystic_book_doc_list.h  mystic_book_editor.c  mystic_book_editor.h  mystic_book_file_list_view.c  mystic_book_file_list_view.h  mystic_color.c  mystic_color.h  mystic_text_view.c  parser.c  parser.h  text_block.h
src/backend/: block.c  block.h  database.c  database.h  file_explorer.c  file_explorer.h  util.c  util.h
src/backend/Repository/: FileRepository.c  FileRepository.h
src/backend/controller/: block_controller.c  block_controller.h
src/backend/database/: database.c  database.h
src/backend/entity/: block.h  document_entity.h
src/backend/repository/: .block_repository.c.swp  block_repository.c  block_repository.h  document_repository.c  document_repository.h
src/backend/service/: block_service.c  block_service.h  file_service.c  file_service.h
src/components/: gfile_list_view.c  gfile_list_view.h  mb_app_window.c  mb_app_window.h  mb_file_browser.c  mb_file_browser.h  mb_file_list.c  mb_file_list.h  mb_file_monitor.h  mb_image.c  mb_image.h  mb_picture.c  mb_picture.h  mb_text_view.c  mb_text_view.h  mb_text_view2.c  mb_text_view2.h
src/draw/: DrawWrapper.c  DrawWrapper.h  mystic_draw.c  mystic_draw.h
src/editor/layout/: mystic_editor_layout.c  mystic_editor_layout.h
src/frontend/: main.c  mb_block_search.c  mb_block_search.h  mb_notebook.c  mb_notebook.h
src/frontend/components/: .mb_text_view.c.swo  mb_app_window.c  mb_app_window.h  mb_app_window_key_controller.c  mb_app_window_key_controller.h  mb_application_window.c  mb_application_window.h  mb_block_search.c  mb_block_search.h  mb_block_search_entry.c  mb_block_search_entry.h  mb_block_search_window.c  mb_block_search_window.h  mb_document_list.c  mb_document_list.h  mb_document_list_row.c  mb_document_list_row.h  mb_link_popover.c  mb_link_popover.h  mb_notebook.c  mb_notebook.h  mb_root_text_block.c  mb_root_text_block.h  mb_settings_dialog.c  mb_settings_dialog.h  mb_text_block.c  mb_text_block.h  mb_text_buffer.c  mb_text_buffer.h  mb_text_view.c  mb_text_view.h  mb_tree_outline.c  mb_tree_outline.h  mb_window_left_sidebar.c  mb_window_left_sidebar.h  mb_window_left_sidebar_button.c  mystic_text_view.c  (+8 more)
src/gapbuffer/: gapbuffer.c  gapbuffer.h
src/window/: WindowWrapper.c  WindowWrapper.h
test/: CMakeLists.txt  TestSample.c  build.sh  file_test.c
(+25 files in other folders)
